force-app/main/default/objects/PO_Shipment_Line__c/PO_Shipment_Line__c.object-meta.xml
<CustomObject>
    <label>Shipment Line (Purchase Order)</label>
    <nameField>
        <displayFormat>PO_SPL-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipment Lines (Purchase Order)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>