force-app/main/default/objects/PO_Shipment_Line__c/fields/Allow_Product_Description_Change__c.field-meta.xml
<CustomField>
    <fullName>Allow_Product_Description_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Product Description Change</label>
    <type>Checkbox</type>
</CustomField>