force-app/main/default/objects/PO_Shipment_Line__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <formula>IF(LEN( Product__r.ProductImageURL__c )=0,&quot;&quot;,IMAGE(Product__r.ProductImageURL__c,&quot;Image&quot;, -1, 90))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image</label>
    <type>Text</type>
</CustomField>