force-app/main/default/objects/PO_Shipment_Line__c/fields/PO_Shipment__c.field-meta.xml
<CustomField>
    <fullName>PO_Shipment__c</fullName>
    <label>Shipment</label>
    <referenceTo>PO_Shipment__c</referenceTo>
    <relationshipName>Shipment_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>