force-app/main/default/objects/PO_Shipment_Line__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Shipment_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>