force-app/main/default/objects/PO_Shipment_Line__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order</label>
    <referenceTo>AcctSeedERP__Purchase_Order__c</referenceTo>
    <relationshipName>Shipment_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>