force-app/main/default/objects/PO_Shipment_Line__c/fields/Purchase_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order Line</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>AcctSeedERP__Purchase_Order_Line__c.AcctSeedERP__Purchase_Order__c</field>
            <operation>equals</operation>
            <valueField>$Source.Purchase_Order__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeedERP__Purchase_Order_Line__c</referenceTo>
    <relationshipLabel>Shipment Lines (Purchase Order)</relationshipLabel>
    <relationshipName>Shipment_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>