force-app/main/default/objects/PO_Shipment_Line__c/fields/Sales_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order Line</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AcctSeedERP__Sales_Order_Line__c.AcctSeedERP__Sales_Order__c</field>
            <operation>equals</operation>
            <valueField>$Source.Sales_Order__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeedERP__Sales_Order_Line__c</referenceTo>
    <relationshipName>Shipment_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>