force-app/main/default/objects/PO_Shipment_Line__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <formula>Purchase_Order_Line__r.Size__c</formula>
    <label>Size</label>
    <type>Text</type>
</CustomField>