force-app/main/default/objects/PO_Shipment_Line__c/validationRules/Allow_Product_Description_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Allow_Product_Description_Change</fullName>
    <active>false</active>
    <description>Allow_Product_Description_Change</description>
    <errorConditionFormula>AND(NOT(ISNEW()),
ISCHANGED( Description__c ),
NOT(Product__r.Allow_Product_Description_Change__c)
)</errorConditionFormula>
    <errorDisplayField>Description__c</errorDisplayField>
    <errorMessage>You can&apos;t update, please mark the &apos;Allow Product Description Change&apos; in Product to update this field.</errorMessage>
</ValidationRule>