force-app/main/default/objects/PO_Shipment_Line__c/validationRules/Quantity_Shipped_more_than_Allocated.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Shipped_more_than_Allocated</fullName>
    <active>false</active>
    <description>The quantity shipped cannot be more than quantity allocated on the related sales order.</description>
    <errorConditionFormula>IF( Quantity_Shipped__c &gt;  Sales_Order_Line__r.AcctSeedERP__Quantity_Allocated__c, True, False)</errorConditionFormula>
    <errorMessage>The quantity shipped cannot be more than the quantity allocated on the related sales order.</errorMessage>
</ValidationRule>